--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,34 @@ before_install:
     - eval "${MATRIX_EVAL}"
 
 
+install:    
+  # first we create a directory for the CMake binaries
+  - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
+  - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
+  # we use wget to fetch the cmake binaries
+  - travis_retry wget --no-check-certificate https://github.com/Kitware/CMake/releases/download/v3.21.2/cmake-3.21.2.tar.gz
+  # this is optional, but useful:
+  # do a quick md5 check to ensure that the archive we downloaded did not get compromised
+  - echo "d5517d949eaa8f10a149ca250e811e1473ee3f6f10935f1f69596a1e184eafc1 *cmake-3.21.2.tar.gz" > cmake_md5.txt
+  - md5sum -c cmake_md5.txt
+  # extract the binaries; the output here is quite lengthy,
+  # so we swallow it to not clutter up the travis console
+  - tar -xvf cmake-3.21.2.tar.gz > /dev/null
+  - mv cmake-3.21.2.tar.gz cmake-install
+  # add both the top-level directory and the bin directory from the archive
+  # to the system PATH. By adding it to the front of the path we hide the
+  # preinstalled CMake with our own.
+  - PATH=${DEPS_DIR}/cmake-install:${DEPS_DIR}/cmake-install/bin:$PATH
+  # don't forget to switch back to the main build directory once you are done
+  - cd ${TRAVIS_BUILD_DIR}
+
 script:
     - sudo ln -s /usr/bin/gcc-10 /usr/local/bin/gcc
     - sudo ln -s /usr/bin/g++-10 /usr/local/bin/g++
     - export CC=/usr/bin/gcc-10
     - export CXX=/usr/bin/g++-10
     - gcc -v && g++ -v && cmake --version
-    - cd IsoLasso_parallel
+    - cd IsoLasso_Parallel
     - mkdir build
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=RELEASE ../
