--- a/.travis.yml
+++ b/.travis.yml
@@ -42,10 +42,10 @@ install:
   # so we swallow it to not clutter up the travis console
   - tar -xvf cmake-3.21.2.tar.gz > /dev/null
   - mv cmake-3.21.2.tar.gz cmake-install
+  - sudo ln -s cmake-install/cmake /usr/local/bin/cmake
   # add both the top-level directory and the bin directory from the archive
   # to the system PATH. By adding it to the front of the path we hide the
   # preinstalled CMake with our own.
-  - export PATH=${DEPS_DIR}/cmake-install:${DEPS_DIR}/cmake-install/bin:$PATH
   - cmake --version
   # don't forget to switch back to the main build directory once you are done
   - cd ${TRAVIS_BUILD_DIR}
