--- a/.travis.yml
+++ b/.travis.yml
@@ -41,10 +41,10 @@ install:
   # extract the binaries; the output here is quite lengthy,
   # so we swallow it to not clutter up the travis console
   - tar -xvf cmake-3.21.2.tar.gz > /dev/null
-  - mv cmake-3.21.2 cmake-install
-  - cd cmake-install
-  - cmake .
-  - cd ../
+  - cd cmake-3.21.2
+  - ./bootstrap
+  - make -j$(nproc)
+  - sudo make install
   - sudo ln -s cmake-install/cmake /usr/local/bin/cmake
   # add both the top-level directory and the bin directory from the archive
   # to the system PATH. By adding it to the front of the path we hide the
