--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ install:
   - ./bootstrap
   - make -j$(nproc)
   - sudo make install
-  - sudo ln -s cmake-install/cmake /usr/local/bin/cmake
+  - cmake --version
   # add both the top-level directory and the bin directory from the archive
   # to the system PATH. By adding it to the front of the path we hide the
   # preinstalled CMake with our own.
