--- a/.travis.yml
+++ b/.travis.yml
@@ -29,29 +29,12 @@ before_install:
 
 
 install:    
-  # first we create a directory for the CMake binaries
-  - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
-  - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
-  # we use wget to fetch the cmake binaries
-  - travis_retry wget --no-check-certificate https://github.com/Kitware/CMake/releases/download/v3.21.2/cmake-3.21.2.tar.gz
-  # this is optional, but useful:
-  # do a quick md5 check to ensure that the archive we downloaded did not get compromised
-  - echo "2ecc4091021c44f400bfbb25dcc77e97  cmake-3.21.2.tar.gz" > cmake_md5.txt
-  - md5sum -c cmake_md5.txt
-  # extract the binaries; the output here is quite lengthy,
-  # so we swallow it to not clutter up the travis console
-  - tar -xvf cmake-3.21.2.tar.gz > /dev/null
-  - cd cmake-3.21.2
-  - ./bootstrap
-  - make -j$(nproc)
-  - sudo make install
+  - sudo apt-get remove cmake
+  - CMAKE_INSTALLER=install-cmake.sh
+  - curl -sSL https://github.com/Kitware/CMake/releases/download/v3.21.2/cmake-3.21.2-linux-x86_64.sh -o ${CMAKE_INSTALLER}
+  - chmod +x ${CMAKE_INSTALLER}
+  - sudo ./${CMAKE_INSTALLER} --prefix=/usr/local --skip-license
   - cmake --version
-  # add both the top-level directory and the bin directory from the archive
-  # to the system PATH. By adding it to the front of the path we hide the
-  # preinstalled CMake with our own.
-  - cmake --version
-  # don't forget to switch back to the main build directory once you are done
-  - cd ${TRAVIS_BUILD_DIR}
 
 script:
     - sudo ln -s /usr/bin/gcc-10 /usr/local/bin/gcc
