--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,10 @@ matrix:
           packages:
             - g++-10
             - gcc-10
-            - cmake
+        snaps:
+          - name: cmake
+            confinement: classic
+            channel: latest/candidate
       env:
          - MATRIX_EVAL="CC=gcc-10 && CXX=g++-10"
 
@@ -26,15 +29,6 @@ before_install:
     - sudo apt install gcc-10
     - sudo apt install g++-10
     - eval "${MATRIX_EVAL}"
-
-
-install:    
-  - sudo apt-get purge -y cmake 
-  - CMAKE_INSTALLER=install-cmake.sh
-  - curl -sSL https://github.com/Kitware/CMake/releases/download/v3.21.2/cmake-3.21.2-linux-x86_64.sh -o ${CMAKE_INSTALLER}
-  - chmod +x ${CMAKE_INSTALLER}
-  - sudo ./${CMAKE_INSTALLER} --prefix=/usr/local --skip-license
-  - cmake --version
 
 script:
     - sudo ln -s /usr/bin/gcc-10 /usr/local/bin/gcc
