--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ before_install:
     - eval "${MATRIX_EVAL}"
 
 script:
+    - whereis g++
+    - whereis cmake
     - sudo ln -s /usr/bin/gcc-10 /usr/local/bin/gcc
     - sudo ln -s /usr/bin/g++-10 /usr/local/bin/g++
     - export CC=/usr/bin/gcc-10
