--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,11 @@ before_install:
 script:
     - whereis g++
     - whereis cmake
-    - sudo ln -s /usr/bin/gcc-10 /usr/local/bin/gcc
-    - sudo ln -s /usr/bin/g++-10 /usr/local/bin/g++
-    - sudo ln -s /usr/bin/cmake  /snap/bin/cmake
-    - export CC=/usr/local/bin/gcc-10
-    - export CXX=/usr/local/bin/g++-10
+    - sudo ln -s /usr/bin/gcc-10 /usr/bin/gcc
+    - sudo ln -s /usr/bin/g++-10 /usr/bin/g++
+    - sudo ln -s /snap/bin/cmake /usr/bin/cmake
+    - export CC=/usr/bin/gcc-10
+    - export CXX=/usr/bin/g++-10
     - gcc -v && g++ -v && cmake --version
     - cd ${TRAVIS_BUILD_DIR}
     - ls
@@ -41,3 +41,4 @@ script:
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=RELEASE ../
     - make
+    - ./unittest
